Add JWT support
